# rsElGamal

./: .ElGamalKey  Cargo.toml  README.md
src/: big_prime.rs  main.rs
