[package]
name = "ElGamal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.3", features = ["rand"]}
num-iter = "0.1.43"
num-traits = "0.2.15"
primal = "0.3.2"
ramp = "0.7.0"
rand = "0.8.5"
serde_json = "1.0.93"
